World Interactions - Damage Zones and Enemies

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,8 +56,10 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\RubyController.cs" />
     <Compile Include="Assets\Scripts\HealthCollectible.cs" />
+    <Compile Include="Assets\Scripts\RubyController.cs" />
+    <Compile Include="Assets\Scripts\DamageZone.cs" />
+    <Compile Include="Assets\Scripts\EnemyController.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\2DBeginner_Third-PartyNotice.txt" />
